--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.6"
+    "@astrojs/react": "^4.2.0",
+    "@tailwindcss/vite": "^4.0.6",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "astro": "^5.2.6",
+    "flowbite": "^3.1.2",
+    "tailwindcss": "^4.0.6"
   }
 }
