--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "astro": "^5.2.6",
     "flowbite": "^3.1.2",
     "tailwindcss": "^4.0.6"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
