--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.0",
-    "@tailwindcss/vite": "^4.0.6",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
+    "@astrojs/react": "4.3.0",
+    "@tailwindcss/vite": "4.0.6",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
     "astro": "^5.8.0",
     "flowbite": "^3.1.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.0.6"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "tailwindcss": "4.0.6"
   },
   "devDependencies": {
-    "prettier": "^3.5.1",
-    "prettier-plugin-tailwindcss": "^0.6.11"
+    "prettier": "3.5.1",
+    "prettier-plugin-tailwindcss": "0.6.11"
   }
 }
