--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
+      "@ui/*": ["src/components/ui/*"],
       "@icons/*": ["src/components/ui/icons/*"],
       "@data/*": ["src/data/*"],
       "@layouts/*": ["src/layouts/*"],
